[project]
name = 'gpiodmonitor'
version = '1.3.1'
description = ''
readme = 'README.md'
requires-python = '>=3.9'
authors = [
{name = 'Eike Christian Kühn', email = 'eike.kuehn@pixelwoelkchen.de'},
]
maintainers = [
{name = 'Eike Christian Kühn', email = 'eike.kuehn@pixelwoelkchen.de'},
]
classifiers = [
    'License :: OSI Approved :: The Unlicense (Unlicense)',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3 :: Only',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python'
]
dependencies = []

[project.urls]
homepage = 'https://github.com/randomchars42/gpiodmonitor'
documentation = 'https://github.com/randomchars42/gpiodmonitor'
source = 'https://github.com/randomchars42/gpiodmonitor'
tracker = 'https://github.com/randomchars42/gpiodmonitor/issues'

[project.scripts]
gpiodmonitor = 'gpiodmonitor.gpiodmonitor:main'

[build-system]
requires = [
    'build~=0.7.0',
    'docutils~=0.18.1',
    'wheel~=0.37.1',
    'twine~=3.8.0',
    'docutils~=0.18.1',
    'wheel~=0.37.1',
    'setuptools~=65.0.0',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ['src']

[tool.mypy]
# add .venv to the mypy path to detect imported packages install by
# pipenv
mypy_path = '$MYPY_CONFIG_FILE_DIR/.venv/lib/python3.10.8/site-packages/'
